--- a/index.html
+++ b/index.html
@@ -5,7 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Etch-A-Sketch</title>
-    <link rel="stylesheet" src="style.css">
+    <style>
+        .parent-div {
+            display: flex;
+            width: 100%;
+            height: 100%;
+        }
+
+        .child-div {
+            width: 16px;
+            height: 16px;
+        }
+    </style>
 </head>
 
 <body>
