--- a/index.html
+++ b/index.html
@@ -1,28 +1,31 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Etch-A-Sketch</title>
-    <style>
-        .parent-div {
-            display: flex;
-            width: 100%;
-            height: 100%;
-        }
-
-        .child-div {
-            width: 16px;
-            height: 16px;
-        }
-    </style>
-    <script src="script.js" defer></script>
-</head>
-
-<body>
-
-    <div id="grid-container"></div>
-</body>
-
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="reset.css"
+        <link rel="stylesheet" href="styles.css">
+        <title>SketchPad</title>
+    </head>
+    <body>
+        <div class="flex-container">
+            <div class="title"><h1>SketchPad</h1></div>
+            <div class="mode">Mode: Coloring</div>
+            <div class="content">
+                <div class="board"></div>
+                <div class="buttons">
+                    <button onclick="changeColor('pink')">Pink</button>
+                    <button onclick="changeColor('lavender')">Purple</button>
+                    <button onclick="changeColor('random')">Random</button>
+                    <button onclick="changeColor('white')">Erasor</button>
+                    <button onclick="resetBoard()">Reset</button>
+                </div>
+                <div>
+                    <input type="text" placeholder="Size of Board" value="16" onchange="changeSize(this.value)" />
+                    <button>Set Size</button>
+                </div>  
+            </div>
+        </div>
+    </body>
+    <script src="main.js"></script>
 </html>
